...
    <string name="select_answer">Select Your Answer</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="your_answer">Your Answer</string>
    <string name="were_you_correct">Were you correct?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="marked_correct">Your answer has been saved as correct</string>
    <string name="marked_incorrect">Your answer has been saved as incorrect</string>
    <string name="you_were_correct">You guessed correctly</string>
    <string name="you_were_incorrect">You guessed incorrectly</string>
    <string name="number_questions">Number of Questions:</string>
    <string name="number_answers_correct">Number of Answers Correct:</string>
    <string name="number_answers_incorrect">Number of Answers Incorrect:</string>
    <string name="results">Results</string>
...
